# OceanBattle.Core

./: .gitignore  CMakeLists.txt  main.cpp
inc/: read.hpp
inc/base/: WindowServiceBase.hpp
inc/impl/: Game.hpp  LocalMap.hpp  Map.hpp  WindowService.hpp  game.hpp
include_to_exec/: fragment.shader  geometry.shader  vertex.shader
src/: Game.cpp  LocalMap.cpp  Map.cpp  WindowService.cpp  read.cpp
